# powergauge

./: .gitignore  LICENSE  README.md  SCRIPT_TODO
benchmarks/blackscholes/: blackscholes.orig  clean.sh  compile.sh  configuration  get_sources.sh  limit  limit.c  multi.txt  test.py  test.sh
benchmarks/blackscholes/src/: blackscholes.cache  blackscholes.s
benchmarks/blender/: compile.sh  configuration  get_sources.py  render.py  test.py
benchmarks/bodytrack/: configuration  get_sources.sh  multi.txt  test.py  test.sh
benchmarks/facesim/: configuration  get_sources.sh  multi.txt  test.py
benchmarks/ferret/: acceptable.py  get_sources.sh  multi.txt  test.py  test.sh
benchmarks/fluidanimate/: configuration  get_sources.sh  hamming.c  multi.txt  test.py  test.sh
benchmarks/freqmine/: configuration  freqdiff.c  get_sources.sh  multi.txt  test.py  test.sh
benchmarks/libav/: Makefile  compilation_script.sh  compile.sh  compile_yasm.sh  configuration  configuration-mpeg4  configuration-prores  create_assembly.sh  get_sources.sh  multi.txt  prores.txt  test.py  vsynth1-mpeg4.txt  vsynth1-prores.txt
benchmarks/libav/genprog-tests/ref/vsynth/: vsynth1-jpegls  vsynth1-mpeg4  vsynth1-prores
benchmarks/libav/inputs/: input_simsmall.tar
benchmarks/libav/test-scripts/: genprog-fate-run.sh  genprog-md5.sh
benchmarks/swaptions/: clean.sh  compile.sh  configuration  diff.py  get_sources.sh  multi.txt  test-simple.py  test.py  test.sh
benchmarks/swaptions/src/: CumNormalInv.s  HJM.s  HJM_Securities.s  HJM_SimPath_Forward_Blocking.s  HJM_Swaption_Blocking.s  MaxFunction.s  RanUnif.s  icdf.s  nr_routines.s  swaptions.s
benchmarks/vips/: configuration  get_sources.sh  multi.txt  test.py
benchmarks/x264/: configuration  double-free.patch  get_sources.sh  multi.txt  test.py
etc/: energy-models.csv  host-emon-mapping.txt
lib/: DD.py  genprogutil.py  pareto.py  testutil.py  util.py
pintool/: bb_trace.cpp  makefile.rules  print_lines.cpp
src/: Makefile  getcpu.c  hamming.c  hires-time.c  limit.c
src/diff-img-src/: Makefile.in  configure.ac  diff-img.cpp
src/power-meter/: power-meter.ino
